# YQ_SDK

./: CMakeLists.txt  Dockerfile  README.md  Tool.sh  config.txt
DOC/: XHand-SDK-使用说明.wps  协议V1_1.xlsx
config/OTA_BAG/X_Hand_OTA/: OTA.yaml
config/YAML/Device_Config/: Can_Config.yaml  Eyou_Motor_Config.yaml  IO_Map.yaml  MZ_Motor_Config.yaml  Serial_Config.yaml  TaiHu_Config.yaml  Timer_Config.yaml
config/cmake/: aarch64-toolchain.cmake
config/cmake_demo/: CMakeLists.txt
inc/Auto_Set_Id/: Auto_Set_Id.hpp
inc/Custom_Device/Battery_BMS/: Battery_BMS.hpp
inc/Custom_Device/Eyou_Motor/: Eyou_Motor_TOP.hpp
inc/Custom_Device/IMU_YuanJi_Uart/: IMU_YuanJi.hpp  crc32_tab.h
inc/Custom_Device/Motor_BenMo/: Motor_BM_M1502D.hpp
inc/Custom_Device/Motor_DaMiao/: Motor_DM_J4310_2EC.hpp
inc/Custom_Device/Motor_TaiHu/: Motor.hpp  Motor_TaiHu.hpp
inc/Custom_Device/Servo_Feetech/: E_Hand.hpp  Feetech_SCS0009.hpp
inc/Custom_Device/Uart_Demo/: Uart_Custom_Demo.hpp
inc/Custom_Device/Uart_Pressure_Sensor/: Hw_Pressure_Sensor.hpp
inc/HARDWARE_TOP/: Custom_TOP.hpp  HARDWARE_TOP.hpp
inc/Led_Device/: Led_Device.hpp
inc/Motor/: Motor.hpp  Motor_TOP.hpp
inc/Motor_Interpolation/: Motor_Interpolation.hpp
inc/Switch_Board/: FD_Can.hpp  GPIO.hpp  Serial.hpp  Switch_Board.hpp  Timer.hpp
inc/Switch_Board/mcu/stm32h743/: README.md  core_cm7.h  mcu_config_map.hpp  stm32h7xx.h  stm32h7xx_hal_uart.h  stm32h7xx_hal_uart_ex.h
inc/Z_SYS_SRC/CAN/: CAN.hpp
inc/Z_SYS_SRC/SYS/: syst.hpp
inc/Z_SYS_SRC/UDP/: UDP.hpp
script/python/: make_pyc.sh  requirements.txt
script/python/Tool/: build_out.py
script/python/UI/: app.py
script/shell/: Docker_Make.sh  Init_Install_Docker.sh  ipconfig.sh  run_test.sh
script/shell/autorun/: autorun.sh  init_autorun.sh  run_stop_exe.sh
src/: CMakeLists.txt
src/Custom_Device/: .config
src/Project/: CMakeLists.txt
src/Project/E_Bot/: CMakeLists.txt
src/Z_SYS_SRC/CAN/: CAN.cpp
src/Z_SYS_SRC/SYS/: sys.cpp
src/Z_SYS_SRC/UDP/: UDP.cpp
